config/Jenkins/Jenkins-Ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
  name: jenkins
  namespace: default
spec:
  rules:
    - host: jenkins.product.3min.work
      http:
        paths:
          - backend:
              serviceName: jenkins
              servicePort: 80
            path: /
  tls:
    - hosts:
        - jenkins.product.3min.work
      secretName: jenkins-product-3min-work-cert
